--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 									    <div class="resume-timeline-item-header mb-2">
 										    <div class="d-flex flex-column flex-md-row">
 										        <h3 class="resume-position-title font-weight-bold mb-1">Pelatih pencak silat bersertifikat IPSI Bangkalan  </h3>
-										        <div class="resume-company-name ms-auto">Asisten Praktikum</div>
+										        <div class="resume-company-name ms-auto">Pelatih</div>
 										    </div><!--//row-->
 										    <div class="resume-position-time">18 oktober 2022 - sekarang</div>
 									    </div><!--//resume-timeline-item-header-->
