--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 									<div class="resume-timeline-item-header mb-2">
 										<div class="d-flex flex-column flex-md-row">
 											<h3 class="resume-position-title font-weight-bold mb-1">Juara 2 beregu putra pencak silat Pekan OLahraga Mahasiswa Provinsi 2022</h3>
-											<h3 class="resume-position-title font-weight-bold mb-1">Juara 3 tTanding putra kelas E Dewasa Putra pencak silat Malang Nasional Championship 2021</h3>
+											<h3 class="resume-position-title font-weight-bold mb-1">Juara 3 Tanding putra kelas E Dewasa Putra pencak silat Malang Nasional Championship 2021</h3>
 											
 										</div><!--//row-->
 										<div class="resume-company-name ms-auto">Kategori Web Design</div>
